[package]
name = "rust-file-io-benchmark"
version = "0.0.0"
edition = "2024"

[lib]
name = "fio"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
axum = "0.8.4"
bytes = "1.10.1"
clap = { version = "4.5.46", features = ["derive"] }
compio = { version = "0.15.0", features = ["bytes", "io", "macros"] }
futures = "0.3.31"
libc = "0.2.175"
memmap2 = "0.9.8"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["stream"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-uring = { version = "0.5.0", features = ["bytes"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"
