[package]
name = "rust-file-io-benchmark"
version = "0.0.0"
edition = "2024"

[lib]
name = "fio"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
axum = "0.8.7"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
compio = { version = "0.16.1", features = ["bytes", "io", "macros"] }
futures = "0.3.31"
libc = "0.2.177"
memmap2 = "0.9.9"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-uring = { version = "0.5.0", features = ["bytes"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"
